[project]
dependencies = [
  "crispy-tailwind>=1.0.3",
  "dj-database-url>=2.2.0",
  "django-allauth>=64.2.1",
  "django-crispy-forms>=2.3",
  "django-environ>=0.11.2",
  "django-htmx>=1.19.0",
  "django-q2>=1.7.2",
  "django-tailwind-cli>=2.15.0",
  "django-template-partials>=24.4",
  "django>=5.1.1",
  "factory-boy>=3.3.1",
  "folium>=0.17.0",
  "geocoder>=1.38.1",
  "gunicorn>=23.0.0",
  "heroicons[django]>=2.8.0",
  "psycopg[binary]>=3.2.1",
  "whitenoise>=6.7.0"
]
description = "Add your description here"
name = "organize-it"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.bandit]
skips = ["B101", "B311"]

[tool.coverage.report]
exclude_also = [
]

[tool.coverage.run]
branch = true
omit = ['*/node_modules/*', '*/venv/*', '*/migrations/*', '*/tests/*', '*/test_*.py', '*/settings/*', '*/wsgi.py', '*/asgi.py', '*/manage.py', '*/core/*', '*/accounts/managers.py', '*/trips/tasks.py']

[tool.djlint]
ignore = "T002,H006"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.testing"
'addopts' = "--nomigrations --cov=. --cov-report html:htmlcov --cov-report term:skip-covered --cov-fail-under 100"
markers = [
  "mapbox: requires Mapbox API key"
]
python_files = "test_*.py"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501", "E741", "F405"]
select = ["E", "F", "B", "I"]

[tool.uv]
dev-dependencies = [
  "coverage>=7.6.1",
  "django-browser-reload>=1.15.0",
  "django-coverage-plugin>=3.1.0",
  "django-debug-toolbar>=4.4.6",
  "django-extensions>=3.2.3",
  "django-test-plus>=2.2.4",
  "djlint>=1.35.2",
  "pre-commit>=3.8.0",
  "pytest-cov>=5.0.0",
  "pytest-django>=4.9.0",
  "pytest-factoryboy>=2.7.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "pywatchman>=2.0.0",
  "werkzeug>=3.0.4"
]
