[dependency-groups]
dev = [
  "coverage>=7.6.1",
  "django-coverage-plugin>=3.1.0",
  "django-test-plus>=2.2.4",
  "django-watchfiles>=1.4.0",
  "djlint>=1.35.2",
  "pre-commit>=3.8.0",
  "pytest>=8.0,<8.4.0",
  "pytest-cov>=5.0.0",
  "pytest-django>=4.9.0",
  "pytest-factoryboy>=2.7.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "pywatchman>=2.0.0",
  "ruff>=0.9.6"
]

[project]
dependencies = [
  "crispy-tailwind>=1.0.3",
  "dj-database-url>=2.2.0",
  "django-allauth>=64.2.1",
  "django-crispy-forms>=2.3",
  "django-environ>=0.11.2",
  "django-htmx>=1.19.0",
  "django-q2>=1.8.0",
  "django-redis>=5.4.0",
  "django-tailwind-cli>=2.15.0",
  "django>=6.0",
  "factory-boy>=3.3.1",
  "folium>=0.17.0",
  "geocoder>=1.38.1",
  "psycopg[binary]>=3.2.1",
  "whitenoise>=6.7.0",
  "django-cotton>=2.0.0",
  "granian[pname]>=2.2.0",
  "django-extensions",
  "django-browser-reload>=1.18.0",
  "django-debug-toolbar>=5.1.0",
  "uvloop>=0.21.0",
  "django-anymail[mailgun]>=13.0",
  "croniter>=6.0.0",
  "requests>=2.32.5",
  "pillow>=12.0.0",
  "redis>=6.2.0",
  "django-dbbackup>=5.0.1",
  "dropbox>=12.0.2",
  "django-storages>=1.14.6"
]
description = "Help you organize your trips and travel plans."
name = "organize_it"
readme = "README.md"
requires-python = ">=3.14"
version = "0.3.0"

[tool.bandit]
skips = ["B101", "B311"]

[tool.coverage.report]
exclude_also = [
]

[tool.coverage.run]
branch = true
omit = ['*/node_modules/*', '*/venv/*', '*/migrations/*', '*/tests/*', '*/test_*.py', '*/settings/*', '*/wsgi.py', '*/asgi.py', '*/manage.py', '*/core/*', '*/accounts/managers.py', '*/trips/tasks.py', "accounts/templatetags/custom_tailwind.py"]

[tool.djlint]
ignore = "T002,H006"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
'addopts' = "--reuse-db --nomigrations --cov=. --cov-report html:htmlcov --cov-report term:skip-covered --cov-fail-under 100"
markers = [
  "mapbox: requires Mapbox API key"
]
python_files = "test_*.py"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
ignore = ["E501", "E741", "F405"]
select = ["E", "F", "B", "I"]
